tolist -> collectors.tolist